@@ -109,12 +109,12 @@ sub _check_file_overlap {
     for (my $i = 0 ; $i < scalar @sorted ; $i++) {
         my $proc = $sorted[$i];
         my $pinfo = $proc->info;
-        my @p = grep { $_ } split /,/o, $pinfo->field ('provides')//'';
+        my @p = grep { $_ } split /,/o, $pinfo->field ('provides', '');
         my $prov = Lintian::Relation->new (join (' |̈́ ', $proc->pkg_name, @p));
         for (my $j = $i ; $j < scalar @sorted ; $j++) {
             my $other = $sorted[$j];
             my $oinfo = $other->info;
-            my @op = grep { $_ } split /,/o, $oinfo->field ('provides')//'';
+            my @op = grep { $_ } split /,/o, $oinfo->field ('provides', '');
             my $oprov = Lintian::Relation->new (join (' | ', $other->pkg_name, @op));
             # poor man's "Multi-arch: same" work-around.
             next if $proc->pkg_name eq $other->pkg_name;
