@@ -54,7 +54,7 @@ foreach (keys %$binpkgs) {
     my ($pkg1, $pkg1_is_any, $pkg2, $pkg2_is_any, $substvar_strips_binNMU);
 
     $pkg1 = $_;
-    $pkg1_is_any = (($info->binary_field($pkg1, 'architecture')//'') ne 'all');
+    $pkg1_is_any = ($info->binary_field($pkg1, 'architecture', '') ne 'all');
 
     foreach my $field (@dep_fields) {
         next unless $info->binary_field($pkg1, $field);
@@ -63,8 +63,8 @@ foreach (keys %$binpkgs) {
         }
     }
 
-    foreach (split(m/,/, ($info->binary_field($pkg1, 'pre-depends')//'').', '.
-               ($info->binary_field($pkg1, 'depends')//''))) {
+    foreach (split (m/,/, ($info->binary_field($pkg1, 'pre-depends', '').', '.
+               $info->binary_field ($pkg1, 'depends', '')))) {
         next unless m/(\S+)\s*\(\s*(\>)?=\s*\${((?:Source-|source:|binary:)Version)}/x;
 
         my $gt = $2//'';
@@ -79,7 +79,7 @@ foreach (keys %$binpkgs) {
                 unless ($pkg2 =~ /\$\{\S+\}/);
             next;
         }
-        $pkg2_is_any = (($info->binary_field($pkg2, 'architecture')//'') ne 'all');
+        $pkg2_is_any = ($info->binary_field($pkg2, 'architecture', '') ne 'all');
 
         if ($pkg1_is_any) {
             if ($pkg2_is_any and $substvar_strips_binNMU) {
