@@ -29,6 +29,12 @@ lintian (2.5.11) UNRELEASED; urgency=low
   * debian/control:
     + [NT] Add (Build-)Depends on libtext-levenshtein-perl.
 
+  * lib/Lintian/Collect{/Source}.pm:
+    + [NT] Add optional parameter to field (and X_field)
+      methods that denotes the default value if a field is
+      missing.  This avoid some boiler plate for callers
+      of the methods.
+
  -- Niels Thykier <niels@thykier.net>  Tue, 10 Jul 2012 13:21:56 +0200
 
 lintian (2.5.10) unstable; urgency=low
